--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
-  <head>
-    <h1>Hello! I'm a lunar!</h1>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Who is lunar?</title>
+</head>
   <body>
     <p>I'm a HTML and a little bit CSS coder. I'm from Russia. Coordinator of </p><a id="red-link" href="https://smilenodes.xyz">SmileNodes</a> and a <a id="red-link" href="https://wiki.smilenodes.xyz">SmileNodes wiki creator.</a>
     
