--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <header>
     <h3>Hi! I'm a lunar!</h3>
 </header>
-<body>
+<main>
     <p>I'm a HTML and a little bit CSS coder. I'm from Russia. Coordinator of </p><a id="red-link" href="https://smilenodes.xyz">SmileNodes</a> and a <a id="red-link" href="https://wiki.smilenodes.xyz">SmileNodes wiki creator.</a>
-</body>
+</main>
