--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h3 class="main-text2">Hi! I'm a <a id="red-link" href="index.html">lunar!</a></h3>
 </header>
 <main>
-    <p class="text2">I'm a HTML and a little bit CSS coder. I'm from Russia. Coordinator of </p><a id="red-link" href="https://smilenodes.xyz">SmileNodes</a> and a <a id="red-link" href="https://wiki.smilenodes.xyz">SmileNodes wiki creator.</a>
+    <p class="text2">I'm a HTML and a little bit CSS coder. I'm from Russia. Coordinator of <a id="red-link" href="https://smilenodes.xyz">SmileNodes</a> and a <a id="red-link" href="https://wiki.smilenodes.xyz">SmileNodes wiki creator.</a></p>
+    <div>
+        <p class="text2">I'VE MY TRUST... IN YOU!!!</p>
+    </div>
 </main>
