--- a/socialmedia.html
+++ b/socialmedia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lunar Portfolio</title>
+    <title>Соц. Сети</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,11 @@
     </header>
     <main>
         <div class="container">
-            <h1>Привет! Я <span id="lunar">Lunar</span>. Я являюсь одним из разработчиков <span id="wiki">«SmileNodes Wiki».</span> Я не очень хороший HTML-кодер, но я очень хорош в технической поддержке. Мой проект - Discord сервер под названием <span id="wiki">«BezzLi».</span></h1>
+            <h1 id="media">Мои соц. сети</h1>
+            <a id="tg" href="https://t.me/lunartechnical"><div class="telegram">
+                <img class="tg" src="https://cdn.freebiesupply.com/logos/large/2x/telegram-logo-black-and-white.png" alt="">
+                <h2>Telegram</h2>
+            </div></a>
         </div>
     </main>
     <footer>
