--- a/motd.html
+++ b/motd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lunar Portfolio</title>
+    <title>Предложение Дня</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,10 @@
     </header>
     <main>
         <div class="container">
-            <h1>Привет! Я <span id="lunar">Lunar</span>. Я являюсь одним из разработчиков <span id="wiki">«SmileNodes Wiki».</span> Я не очень хороший HTML-кодер, но я очень хорош в технической поддержке. Мой проект - Discord сервер под названием <span id="wiki">«BezzLi».</span></h1>
+            <h1 id="motd">MOTD</h1>
+            <div class="motd">
+                <h1>{Предложение Дня}</h1>
+            </div>
         </div>
     </main>
     <footer>
