--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lunar Portfolio</title>
+    <title>Мои работы</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,17 @@
     </header>
     <main>
         <div class="container">
-            <h1>Привет! Я <span id="lunar">Lunar</span>. Я являюсь одним из разработчиков <span id="wiki">«SmileNodes Wiki».</span> Я не очень хороший HTML-кодер, но я очень хорош в технической поддержке. Мой проект - Discord сервер под названием <span id="wiki">«BezzLi».</span></h1>
+            <h1 id="projects">Мои работы</h1>
+            <div class="projects">
+                <div class="bezzli">
+                    <h2>BezzLi</h2>
+                    <p>Просто сервер для общения</p>
+                </div>
+                <div class="wiki2">
+                    <h2>SmileNodes Wiki</h2>
+                    <p>Я принимал участие в разработке данной вики. Сделал там FAQ, буду делать перевод на английский язык.</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
