--- a/motd.html
+++ b/motd.html
@@ -17,7 +17,7 @@
         <div class="container">
             <h1 id="motd">MOTD</h1>
             <div class="motd">
-                <h1>{Предложение Дня}</h1>
+                <h1>Вкусные пелмешки</h1>
             </div>
         </div>
     </main>
