--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <div class="container">
-            <h1>Привет! Я <span id="lunar">Lunar</span>. Я являюсь одним из разработчиков <span id="wiki">«SmileNodes Wiki».</span> Я не очень хороший HTML-кодер, но я очень хорош в технической поддержке. Мой проект - Discord сервер под названием <span id="wiki">«BezzLi».</span></h1>
+            <h1>Привет! Я <span id="lunar">Lunar</span>. Я являюсь одним из разработчиков <span id="wiki">«SmileNodes Wiki»</span> и директором <a href="https://smilenodes.xyz"><span id="wiki">«SmileNodes».</span></a> Я не очень хороший HTML-кодер, но я очень хорош в технической поддержке. Мой проект - Discord сервер под названием <span id="wiki">«BezzLi».</span></h1>
         </div>
     </main>
     <footer>
