--- a/index.html
+++ b/index.html
@@ -1,36 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Хостинг Swap-Nodes</title>
-    <link rel="stylesheet" href="style.css">
+  <h1>swap-nodes.ru</h1>
+  <h2>домен для хоста, лешко запомнить</h2>
 </head>
-<body>
-    <header>
-        <h1>Хостинг Swap-Nodes</h1>
-    </header>
-    <main>
-        <div class="card">
-            <h2>Быстрый и надежный хостинг</h2>
-            <p>Наш хостинг быстрый, надежный и безопасный. Мы используем последние технологии, чтобы гарантировать, что ваш сайт всегда онлайн и работает без сбоев.</p>
-        </div>
-        <div class="card">
-            <h2>Простая в использовании панель управления</h2>
-            <p>Наша панель управления проста в использовании и упакована функциями. Вы можете управлять своим сайтом, электронной почтой и базами данных с легкостью. <br> <a href="https://dash.smilenodes.xyz/register?ref=lunar">Панель лучшего хостинга</a></p>
-        </div>
-        <div class="card">
-            <h2>Поддержка 24/7</h2>
-            <p>Наша команда поддержки доступна 24/7, чтобы помочь вам с любыми вопросами или проблемами, которые у вас могут возникнуть. Мы всегда готовы помочь.</p>
-        </div>
-    </main>
-    <footer>
-        &copy; 2024 Хостинг Swap-Nodes. Все права защищены.
-        <div class="social-links">
-            <a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        </div>
-    </footer>
-</body>
 </html>
