--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="ru">
 <head>
   <h1>swap-nodes.ru</h1>
-  <h2>домен для хоста, лешко запомнить</h2>
+  <h2>домен для хоста, легко запомнить</h2>
 </head>
 </html>
