--- a/redericts/host.html
+++ b/redericts/host.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=http://gamely.pro"/>
+    <meta http-equiv="refresh" content="0;URL=https://music.youtube.com/watch?v=Hy8kmNEo1i8"/>
   </head>
 </html>
