--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <h1>swap-nodes.ru</h1>
-  <h2>домен для хоста, легко запомнить</h2>
-</head>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0;URL=https://play2go.cloud/?ref_id=YpCbwhc9RAI"/>
+  </head>
 </html>
