--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=https://play2go.cloud/?ref_id=YpCbwhc9RAI"/>
+    <h1>swap-nodes.ru</h1>
   </head>
 </html>
